libs/@local/hashql/hir/tests/ui/lower/inference/unsatisfiable-upper-constraint.jsonc
//@ run: fail
//@ description: Test that input inference for the default works
[
  "input",
  "x",
  "Number",
  { "#literal": "42", "#type": "_" }
  //~^ ERROR This variable has conflicting type requirements
]
